live reload styles,html+

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
-.test {
-    text-align: center;
-    &__box {
-        margin: 10px;
-    }
+body {
+    background-color: darkkhaki;
 }
+ h1 {
+     font-size: 40px;
+     color: black;
+ }
