js live-reload+

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 body {
-    background-color: darkkhaki;
+    background-color: bisque;
 }
  h1 {
-     font-size: 40px;
-     color: black;
+     font-size: 50px;
+     color: white;
  }
