--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,40 +1,7 @@
-
 @font-face {
-    font-family: "Futura-PT";
-    src: local('Futura-PT-Light'),
-    url(../../assets/fonts/Futura-PT/futura-pt-book.ttf);
+    font-family: "MarckScript-Regular";
+    src: local('MarckScript'),
+    url(../../assets/fonts/MarckScript/MarckScript-Regular.ttf);
     font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Futura-PT";
-    src: local('Futura-PT-Bold'),
-    url(../../assets/fonts/Futura-PT/futura-pt-bold.ttf);
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Futura-PT";
-    src: local('Futura-PT-Medium'),
-    url(../../assets/fonts/Futura-PT/futura-pt-medium.ttf);
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Futura-PT";
-    src: local('Futura-PT-Demi'),
-    url(../../assets/fonts/Futura-PT/futura-pt-demi.ttf);
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Futura-PT";
-    src: local('Futura-PT-Heavy'),
-    url(../../assets/fonts/Futura-PT/futura-pt-extra-bold.ttf);
-    font-weight: 800;
     font-style: normal;
 }
