--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -1,4 +1,12 @@
 body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+body {
+    background-color: #161a1e;
+    font-family: "MarckScript-Regular", sans-serif;
+    display: flex;
+    flex-direction: column;
 }
