--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "MarckScript-Regular";
     src: local('MarckScript'),
-    url(../../assets/fonts/MarckScript/MarckScript-Regular.ttf);
+    url(../assets/fonts/MarckScript/MarckScript-Regular.ttf);
     font-weight: normal;
     font-style: normal;
 }
