--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -5,8 +5,9 @@ body, html {
 }
 
 body {
-    background-color: #161a1e;
+    background-color: #18171c;
     font-family: "MarckScript-Regular", sans-serif;
     display: flex;
     flex-direction: column;
+    color: black;
 }
