--- a/src/scss/module/header.scss
+++ b/src/scss/module/header.scss
@@ -1,10 +1,8 @@
 .header {
-    border-bottom: 1px dashed #ffffff;
     flex: 0 0 auto;
+    background-color: white;
     &__title {
         font-size: 16px;
-        font-family: sans-serif;
-        color: white;
         text-align: center;
     }
 }
